--- a/style.css
+++ b/style.css
@@ -230,7 +230,8 @@ hr {
     }
 } */
 
-@media only screen and (hover: none) and (pointer: coarse){
+@media only screen and (orientation: portrait) {
+/* @media only screen and (hover: none) and (pointer: coarse){ */
     .header-right .subtitle {
         font-size: larger;
     }
@@ -249,7 +250,7 @@ hr {
     }
 
     .navigation {
-        font-size: xx-large;
+        font-size: 4vw;
     }
 
     .column {
